io-takamaka-examples/src/main/java/io/takamaka/tests/errors/illegaltypeforstoragefield1/NonStorage.java
package io.takamaka.tests.errors.illegaltypeforstoragefield1;

public class NonStorage {
}